--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
 	<title>Tirage au sort</title>
 </head>
 <body>
+<h1>Tirage au sort</h1>
 
+
+
+<table id="liste" class="table table-striped">
+			<thead>
+				<tr>
+					<th></th>
+					<th>Nom</th>
+				</tr>
+			</thead>
+			<tbody>
+					<th>N°</th>
+					
+
+					</tr>
+			</tbody
+
+</table>
+
+<button id="execute"type="button" class="btn btn-primary">Executer</button>
+
+<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
