Modification de l'exercice.

--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
 <table id="liste" class="table table-striped">
 			<thead>
 				<tr>
-					<th></th>
+					<th>N°</th>
 					<th>Nom</th>
 				</tr>
 			</thead>
 			<tbody>
-					<th>N°</th>
-					
-
-					</tr>
+							
 			</tbody
 
 </table>
@@ -29,6 +26,6 @@
 <button id="execute"type="button" class="btn btn-primary">Executer</button>
 
 <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
